# open-transparent-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
src/filters/: mod.rs
src/filters/base/: mod.rs  regex.rs
src/filters/templates/: html.rs  mod.rs  notion.rs
