[package]
name = "open-transparent-proxy"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Open Transparent Forward Proxy Service for Rendering Cross-Origin Services"
documentation = "https://docs.rs/open-transparent-proxy"
license = "AGPL-3.0"
readme = "./README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { git = "https://github.com/ulagbulag/OpenARK.git", default-features = false, features = [
    "actix-web",
] }
anyhow = { version = "1.0", features = ["backtrace"] }
actix-web = { version = "4.3", default-features = false, features = ["rustls"] }
# actix-web-lab = { version = "0.19" }
futures = { version = "0.3" }
log = { version = "0.4" }
mime = { version = "0.3" }
regex = { version = "1.8" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0", features = ["derive"] }
