[package]
name = "open-transparent-proxy"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Open Transparent Forward Proxy Service for Rendering Cross-Origin Services"
documentation = "https://docs.rs/open-transparent-proxy"
license = "AGPL-3.0"
readme = "./README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["compression", "filter-all", "tls-rustls"]

# Filters
filter-all = ["filter-html", "filter-notion"]

## Filters :: each
filter-html = ["regex"]
filter-notion = ["regex"]

# HTTP
compression = ["reqwest/brotli", "reqwest/deflate", "reqwest/gzip"]

# TLS
tls-default = ["reqwest/default-tls"]
tls-native = ["reqwest/native-tls"]
tls-rustls = ["reqwest/rustls-tls"]

[dependencies]
ark-core = { git = "https://github.com/ulagbulag/OpenARK.git", default-features = false, features = [
    "actix-web",
] }
anyhow = { version = "1.0", features = ["backtrace"] }
actix-web = { version = "4.3", default-features = false, features = ["rustls"] }
# actix-web-lab = { version = "0.19" }
futures = { version = "0.3" }
# http-cache-reqwest = { version = "0.10" }
log = { version = "0.4" }
mime = { version = "0.3" }
paste = { version = "1.0" }
regex = { version = "1.8", optional = true }
reqwest = { version = "0.11", default-features = false, features = [
    "socks",
    "stream",
] }
# reqwest-middleware = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
strfmt = { version = "0.2" }
